@@ -138,6 +138,21 @@ name|common
 operator|.
 name|cloud
 operator|.
+name|Replica
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
 name|ZkCoreNodeProps
 import|;
 end_import
@@ -490,6 +505,22 @@ name|getCoreName
 argument_list|()
 decl_stmt|;
 name|String
+name|replicaCoreNodeName
+init|=
+operator|(
+operator|(
+name|Replica
+operator|)
+name|nodeProps
+operator|.
+name|getNodeProps
+argument_list|()
+operator|)
+operator|.
+name|getName
+argument_list|()
+decl_stmt|;
+name|String
 name|replicaUrl
 init|=
 name|nodeProps
@@ -567,11 +598,7 @@ name|log
 operator|.
 name|warn
 argument_list|(
-literal|"Asking core "
-operator|+
-name|coreNeedingRecovery
-operator|+
-literal|" on  "
+literal|"Asking core={} coreNodeName={} on "
 operator|+
 name|recoveryUrl
 operator|+
@@ -584,6 +611,10 @@ operator|+
 name|maxTries
 operator|+
 literal|" attempts so far ..."
+argument_list|,
+name|coreNeedingRecovery
+argument_list|,
+name|replicaCoreNodeName
 argument_list|)
 expr_stmt|;
 block|}
@@ -593,15 +624,15 @@ name|log
 operator|.
 name|info
 argument_list|(
-literal|"Asking core "
-operator|+
-name|coreNeedingRecovery
-operator|+
-literal|" on  "
+literal|"Asking core={} coreNodeName={} on "
 operator|+
 name|recoveryUrl
 operator|+
 literal|" to recover"
+argument_list|,
+name|coreNeedingRecovery
+argument_list|,
+name|replicaCoreNodeName
 argument_list|)
 expr_stmt|;
 block|}
@@ -649,13 +680,13 @@ name|CoreAdminAction
 operator|.
 name|REQUESTRECOVERY
 operator|+
-literal|" command to core "
-operator|+
-name|coreNeedingRecovery
-operator|+
-literal|" on "
+literal|" command to core={} coreNodeName={} on "
 operator|+
 name|recoveryUrl
+argument_list|,
+name|coreNeedingRecovery
+argument_list|,
+name|replicaCoreNodeName
 argument_list|)
 expr_stmt|;
 name|continueTrying
@@ -778,15 +809,15 @@ name|log
 operator|.
 name|warn
 argument_list|(
-literal|"Stop trying to send recovery command to downed replica "
-operator|+
-name|coreNeedingRecovery
-operator|+
-literal|" on "
+literal|"Stop trying to send recovery command to downed replica core={} coreNodeName={} on "
 operator|+
 name|replicaNodeName
 operator|+
 literal|" because my core container is shutdown."
+argument_list|,
+name|coreNeedingRecovery
+argument_list|,
+name|replicaCoreNodeName
 argument_list|)
 expr_stmt|;
 name|continueTrying
@@ -894,7 +925,7 @@ name|collection
 argument_list|,
 name|shardId
 argument_list|,
-name|coreNeedingRecovery
+name|replicaCoreNodeName
 argument_list|)
 decl_stmt|;
 if|if
@@ -908,9 +939,13 @@ name|log
 operator|.
 name|warn
 argument_list|(
-literal|"Stop trying to send recovery command to downed replica "
+literal|"Stop trying to send recovery command to downed replica core="
 operator|+
 name|coreNeedingRecovery
+operator|+
+literal|",coreNodeName="
+operator|+
+name|replicaCoreNodeName
 operator|+
 literal|" on "
 operator|+
@@ -1062,11 +1097,7 @@ name|log
 operator|.
 name|warn
 argument_list|(
-literal|"Replica "
-operator|+
-name|coreNeedingRecovery
-operator|+
-literal|" set to active but the leader thinks it should be in recovery;"
+literal|"Replica core={} coreNodeName={} set to active but the leader thinks it should be in recovery;"
 operator|+
 literal|" forcing it back to down state to re-run the leader-initiated recovery process; props: "
 operator|+
@@ -1076,6 +1107,10 @@ name|get
 argument_list|(
 literal|0
 argument_list|)
+argument_list|,
+name|coreNeedingRecovery
+argument_list|,
+name|replicaCoreNodeName
 argument_list|)
 expr_stmt|;
 name|zkController
@@ -1109,13 +1144,13 @@ name|log
 operator|.
 name|warn
 argument_list|(
-literal|"Failed to determine state of "
-operator|+
-name|coreNeedingRecovery
-operator|+
-literal|" due to: "
+literal|"Failed to determine state of core={} coreNodeName={} due to: "
 operator|+
 name|ignoreMe
+argument_list|,
+name|coreNeedingRecovery
+argument_list|,
+name|replicaCoreNodeName
 argument_list|)
 expr_stmt|;
 comment|// eventually this loop will exhaust max tries and stop so we can just log this for now
